plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.4'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'com.github.ben-manes.versions' version '0.51.0'
	id 'org.ec4j.editorconfig' version '0.1.0'
	id 'com.diffplug.eclipse.apt' version '3.44.0'
}

group = 'com.glinboy'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = JavaVersion.VERSION_22
	targetCompatibility = JavaVersion.VERSION_22
}

repositories {
	mavenCentral()
}

ext {
	jsr310Version = '2.17.0'
	springdocVersion = '2.3.0'
	mapstructVersion = '1.5.5.Final'
	jjwtVersion = '0.12.5'
}

defaultTasks "bootRun"

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation('org.springframework.boot:spring-boot-starter-web') {
		exclude module: 'spring-boot-starter-tomcat'
	}
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'

	implementation "org.springframework.boot:spring-boot-starter-undertow"
	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
	implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
	runtimeOnly "io.jsonwebtoken:jjwt-impl:${jjwtVersion}"
	runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jjwtVersion}"
	implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jsr310Version}"
	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdocVersion}"
	implementation "org.springdoc:springdoc-openapi-starter-common:${springdocVersion}"
	compileOnly "org.projectlombok:lombok"
	annotationProcessor "org.projectlombok:lombok"
	
	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
}

bootRun {
	jvmArgs = [
				'-XX:+UseZGC',
				'-Xlog:gc*:file=log/jcart.gc.log',
				'-XX:+HeapDumpOnOutOfMemoryError',
				'-XX:HeapDumpPath=log/crashes/jcart.hprof',
				'-Xss256k',
				'-Dsun.net.client.defaultConnectTimeout=2000',
				'-Dsun.net.client.defaultReadTimeout=2000'
			]
}

test {
	useJUnitPlatform()
}
